deploy/base/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wildfly-service
  namespace: wildfly
spec:
  type: NodePort
  selector:
    app: wildfly-ap
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    # - name: http-admin
    #   protocol: TCP
    #   port: 9990
    #   targetPort: 9990
