deploy/base/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildfly-ingress
  namespace: wildfly
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: uploaded-certificate
    networking.gke.io/managed-certificates: google-managed-certificate
    kubernetes.io/ingress.global-static-ip-name: wildfly-ip-address
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
    - secretName: TLS-CERTIFICATE-SECRET-NAME
  defaultBackend:
    service:
      name: wildfly-service
      port:
        number: 8080
